--- a/.github/workflows/sass.yml
+++ b/.github/workflows/sass.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install Sass
         run: npm install -g sass
       - name: Compile SCSS
-        run: sass CSS/estilos.scss CSS/estilos.css
+        run: npx sass CSS/estilos.scss CSS/estilos.css
       - name: Commit and push compiled CSS
         uses: EndBug/add-and-commit@v9
         with:
