--- a/.github/workflows/sass.yml
+++ b/.github/workflows/sass.yml
@@ -8,19 +8,23 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
           node-version: '18'
-      - name: Install Sass
-        run: npm install -g sass
+
       - name: Compile SCSS
         run: npx sass CSS/estilos.scss CSS/estilos.css
-      - name: Commit and push compiled CSS
-        uses: EndBug/add-and-commit@v9
-        with:
-          add: 'CSS/estilos.css'
-          message: 'Auto-compile SCSS to CSS'
+
+      - name: Commit and push compiled CSS (optional)
+        if: ${{ github.ref == 'refs/heads/main' }} 
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add CSS/estilos.css
+          git diff --cached --quiet || git commit -m "Auto-compile SCSS to CSS"
+          git push
+
